syntax = "proto3";

package parametric.v1;

message ParamDelta {
  string path = 1;
  string value_json = 2;
}

message ApplyDeltaRequest {
  string project_id = 1;
  repeated ParamDelta deltas = 2;
}

message ConstraintViolation {
  string code = 1;
  string severity = 2;
  string message = 3;
  repeated string affected_cabinet_ids = 4;
  repeated string affected_geometry_ids = 5;
}

message ConstraintSummary {
  bool has_blocking_errors = 1;
  repeated ConstraintViolation violations = 2;
}

message ParametricStateJson {
  string json = 1;
}

message ApplyDeltaResponse {
  ParametricStateJson state = 1;
  ConstraintSummary constraints = 2;
}

message ValidateDesignRequest {
  string project_id = 1;
}

message ValidateDesignResponse {
  ConstraintSummary constraints = 1;
}

service ParametricKernelService {
  rpc ApplyDelta(ApplyDeltaRequest) returns (ApplyDeltaResponse);
  rpc ValidateDesign(ValidateDesignRequest) returns (ValidateDesignResponse);
}
